<resources>
    <string name="app_name">STAD EVENTS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_ticket">Ticket</string>
    <string name="menu_item_announcement">Announcement</string>
    <string name="menu_item_settings">Settings</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="help_message">Contact the developer of this app for more information.</string>
    <string name="paying_details">Paying Details</string>
    <string name="paying_details_text">Here are the details of the paying method: Card number 1234 **** **** 9876</string>
    <string name="security">Security</string>
    <string name="security_details">You can change you password here.</string>
    <string name="shared_preference_organiser">Shared Preference Organiser</string>
</resources>