<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_item_home" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_item_search" />
    <item
        android:id="@+id/ticketFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_ticket_24"
        android:title="@string/menu_item_ticket"/>
    <item
        android:id="@+id/announcementFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_announcement_24"
        android:title="@string/menu_item_announcement"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_item_settings" />
</menu>